# MLOps

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cloud.py  cloudbuild.yaml  data.dvc  environment.yml  pyproject.toml  requirements.txt  requirements_model.txt  requirements_serve.txt  requirements_tests.txt  server_model.dockerfile
.dvc/: config
.github/workflows/: codecheck.yml  tests.yml
MLOps/: LICENSE  Makefile  README.md  pyproject.toml
MLOps/Project/: __init__.py
animals10/: Loader.py  __init__.py  compressor.py  inference.py  predict_model.py  serve.py  train_model.py
animals10/data/: Preprocessing.py  make_dataset.py
animals10/models/: CNNModel.py  GoogLeNet.py  Preprocessing.py  __init__.py
cloudbuild/: deploy_model.yaml
config/: config.yaml  sweep.yaml
dockerfiles/: mlops.dockerfile  predict_model.dockerfile  server_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: configs.ipynb  gcr_predict.ipynb  predict_cloud.ipynb  predict_local.ipynb  predict_server.ipynb  train.ipynb  visualise_raw_data.ipynb
outputs/2024-01-09/15-43-18/.hydra/: hydra.yaml
outputs/2024-01-11/14-03-23/.hydra/: config.yaml  hydra.yaml
reports/: README.md  report.html
tests/: test_data.py  test_pass.py  test_training.py
